metadata/force-app/main/default/objects/CustomName_wbMxC__c/CustomName_wbMxC__c.object-meta.xml
<CustomObject>
    <description>Description_ZtHmi</description>
    <label>CustomLabel_rYHzX</label>
    <nameField>
        <label>CustomLabel_rYHzX</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_rYHzXs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>