metadata/force-app/main/default/objects/CustomName_wbMxC__c/fields/CustomField_oBsBB__c.field-meta.xml
<CustomField>
    <fullName>CustomField_oBsBB__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldkIIvO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>