metadata/force-app/main/default/objects/CustomName_wbMxC__c/fields/CustomField_saWod__c.field-meta.xml
<CustomField>
    <fullName>CustomField_saWod__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldyqLBG</label>
    <length>255</length>
    <type>Text</type>
</CustomField>